changement href pour ramener à la page produits

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           Donec dignissim, odio ac imperdiet luctus, ante nisl accumsan justo, et venenatis ante metus pellentesque sem.
         </p>
         <div class="hero-cta">
-          <a href="#services" class="btn btn-secondary">Nos Offres</a>
+          <a href="/produits.html" class="btn btn-secondary">Nos Offres</a>
         </div>
       </div>
     </div>
