reparamétrage map google

--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
     <section class="map-section">
         <h3>Notre adresse</h3>
         <div class="map-container">
-           <iframe class="google-map"src="https://www.google.com/maps/embed?pb=!4v1751552709575!6m8!1m7!1sT3Y3arvhuVpx2cSwuDWUkg!2m2!1d48.86494578171114!2d2.31047400482621!3f9.352646!4f0!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+           <iframe class="google-map"src="https://www.google.com/maps?q=48.8588443,2.2943506&output=embed" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
         <div class="map-contact">
