peaufinage accueil - bouton cta et image teams

--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
                     <p class="project-description">
                         Donec dignissim, odio ac imperdiet luctus, ante nisl accusam justo, et 
                         venenatis ante metus pellentesque sem.
+                        <a href="produits.html" class="btn btn-secondary CTA">Découvrir nos offres</a>
                     </p>
-                    <a href="produits.html" class="btn btn-secondary">Découvrir nos offres</a>
+                    
                 </div>
             </div>
         </div>
@@ -189,10 +190,10 @@
     <div class="team-images">
       <div class="image-grid">
         <img class = "img-team-square"src="/assets/logo_nom.png" alt="Membre équipe">
-        <img class = "img-team-square"src="https://images.pexels.com/photos/1181690/pexels-photo-1181690.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Membre équipe">
-        <img class = "img-team-circle"src="https://images.pexels.com/photos/1181424/pexels-photo-1181424.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Membre équipe">
-        <img class = "img-team-circle"src="https://images.pexels.com/photos/1181414/pexels-photo-1181414.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Membre équipe">
-        <img class = "img-team-square"src="https://images.pexels.com/photos/1181398/pexels-photo-1181398.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Membre équipe">
+        <img class = "img-team-square"src="assets/femme_equipe1.png" alt="Membre équipe">
+        <img class = "img-team-circle"src="assets/femme2.png" alt="Membre équipe">
+        <img class = "img-team-circle"src="assets/homme2.png" alt="Membre équipe">
+        <img class = "img-team-square"src="assets/homme1.png" alt="Membre équipe">
         <img class = "img-team-square"src="https://images.pexels.com/photos/1181415/pexels-photo-1181415.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Membre équipe">
       </div>
     </div>
