peaufinage ajout image

--- a/produits.html
+++ b/produits.html
@@ -146,7 +146,7 @@
                     <div class="step-number">1</div>
                     <div class="step-content">
                         <div class="step-icon">
-                            <img src="https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?auto=compress&cs=tinysrgb&w=200" alt="Cadrage & Validation">
+                            <img src="/assets/logo_cadrage.png" alt="Cadrage & Validation">
                         </div>
                         <h3>Cadrage & Validation</h3>
                         <p>Comprendre vos besoins et votre cible</p>
@@ -157,7 +157,7 @@
                     <div class="step-number">2</div>
                     <div class="step-content">
                         <div class="step-icon">
-                            <img src="https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?auto=compress&cs=tinysrgb&w=200" alt="UX/UI">
+                            <img src="assets/logouxui.png" alt="UX/UI">
                         </div>
                         <h3>UX/UI</h3>
                         <p> Création d'un prototype fonctionnel</p>
@@ -168,7 +168,7 @@
                     <div class="step-number">3</div>
                     <div class="step-content">
                         <div class="step-icon">
-                            <img src="https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?auto=compress&cs=tinysrgb&w=200" alt="Développement MVP">
+                            <img src="assets/logodevmvp.png" alt="Développement MVP">
                         </div>
                         <h3>Développement MVP</h3>
                         <p>Développement rapide, méthode agile</p>
@@ -179,7 +179,7 @@
                     <div class="step-number">4</div>
                     <div class="step-content">
                         <div class="step-icon">
-                            <img src="https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?auto=compress&cs=tinysrgb&w=200" alt="Lancement & feedback">
+                            <img src="assets/logo.svg" alt="Lancement & feedback">
                         </div>
                         <h3>Lancement & feedback</h3>
                         <p>Mise en ligne + itérations post-lancement</p>
