réglé problème loop carousel - section équipe

--- a/index.html
+++ b/index.html
@@ -216,13 +216,22 @@
       <p class="team-description">
         Donec dignissim, odio ac imperdiet luctus, ante nisl accumsan justo, et venenatis ante metus pellentesque sem.
       </p>
-    <div class="carousel-track">
-      <div class="slide"><img class = "img-team-square"src="/assets/logo_nom.png" alt="Logo équipe"></div>
-      <div class="slide"><img class = "img-team-circle"src="https://images.pexels.com/photos/1181424/pexels-photo-1181424.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Équipe"></div>
-      <div class="slide"><img class=  "img-team-circle"src="https://images.pexels.com/photos/1181414/pexels-photo-1181414.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Équipe"></div>
-      <div class="slide"><img class = "img-team-square"src="https://images.pexels.com/photos/1181398/pexels-photo-1181398.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Équipe"></div>
-      <div class="slide"><img class = "img-team-square"src="https://images.pexels.com/photos/1181415/pexels-photo-1181415.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Équipe"></div>
-    </div>
+    <div class="loop--slider">
+  <div class="loop--slide--track">
+    <div class="loop--slide"><img src="/assets/logo_nom.png" alt="Logo équipe" /></div>
+    <div class="loop--slide"><img src="assets/femme_equipe1.png" alt="Équipe" /></div>
+    <div class="loop--slide"><img src="assets/femme2.png" alt="Équipe" /></div>
+    <div class="loop--slide"><img src="assets/homme2.png" alt="Équipe" /></div>
+    <div class="loop--slide"><img src="assets/homme1.png" alt="Équipe" /></div>
+
+    <!-- Dupliqué pourl'effet loop sans fin -->
+    <div class="loop--slide"><img src="/assets/logo_nom.png" alt="Logo équipe" /></div>
+    <div class="loop--slide"><img src="assets/femme_equipe1.png" alt="Équipe" /></div>
+    <div class="loop--slide"><img src="assets/femme2.png" alt="Équipe" /></div>
+    <div class="loop--slide"><img src="assets/homme2.png" alt="Équipe" /></div>
+    <div class="loop--slide"><img src="assets/homme1.png" alt="Équipe" /></div>
+  </div>
+</div>
   
     <div class="team-cta-caroussel">
       <a href="contact.html" class="btn btn-primary">Découvrez-Les Ici</a>
