Modif Boutons carte

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <p>Vivamus sit amet</p>
                             <p>Cras convallis lacus orci</p>
                         </div>
-                        <button class="btn btn-primary">Prenez RDV</button>
+                        <button class="btn btn-primary">Choisir Plan</button>
                     </div>
                     <p class="project-description">
                         Donec dignissim, odio ac imperdiet luctus, ante nisl accusam justo, et 
