--- a/produits.html
+++ b/produits.html
@@ -76,7 +76,7 @@
                     <p class="pricing-description">
                         Imperdiet et vestibulum lorem et cursus tellus aliquam lacinia lorem id blandit.
                     </p>
-                    <button class="btn btn-outline">Choisir</button>
+                    <button class="btn btn-outline">Choisir Plan</button>
                 </div>
 
                 <div class="pricing-card featured">
@@ -94,7 +94,7 @@
                     <p class="pricing-description">
                         Imperdiet et vestibulum lorem et cursus tellus aliquam lacinia lorem id blandit.
                     </p>
-                    <button class="btn btn-primary">Choisir</button>
+                    <button class="btn btn-primary">Choisir Plan</button>
                 </div>
 
                 <div class="pricing-card">
@@ -112,7 +112,7 @@
                     <p class="pricing-description">
                         Imperdiet et vestibulum lorem et cursus tellus aliquam lacinia lorem id blandit.
                     </p>
-                    <button class="btn btn-outline">Choisir</button>
+                    <button class="btn btn-outline">Choisir Plan</button>
                 </div>
 
                 <div class="pricing-card">
