ajout logo svg sur page accueil / hero section

--- a/contact.html
+++ b/contact.html
@@ -158,8 +158,8 @@
             </div>
         </div>
         <div class="map-contact">
-            <p><span>Adresse:</span>91, Chemin des Bateliers - 81000 Albi  France</p>
-            <p><span>Téléphone:</span>+33 (0)5.39.90.39.35</p>
+            <p alt = "Adresse"><span>Adresse:</span>91, Chemin des Bateliers - 81000 Albi  France</p>
+            <p alt = "Téléphone"><span>Téléphone:</span>+33 (0)5.39.90.39.35</p>
         </div>
     </section>
 
