--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
   <div class="hero-overlay">
     <div class="hero-container">
       <div class="hero-content">
+        <img src="assets/logo-hero.svg" alt="logohero">
         <h1 class="hero-title">
           Transformez Votre Idée En Produit Numérique
         </h1>
+         
         <p class="hero-subtitle">
           Donec dignissim, odio ac imperdiet luctus, ante nisl accumsan justo, et venenatis ante metus pellentesque sem.
         </p>
