--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
   <!-- Mobile Carousel qui s'affiche et remplace la version desktop, pcq trop compliqué ce que j'ai mis sur maquette..-->
   <div class="team-carousel">
-    <h2 class="section-title">Notre Équipe</h2>
+    <h2 class="section-title">Notre Team</h2>
       <p class="team-description">
         Donec dignissim, odio ac imperdiet luctus, ante nisl accumsan justo, et venenatis ante metus pellentesque sem.
       </p>
@@ -236,71 +236,72 @@
 </div>
   
     <div class="team-cta-caroussel">
-      <a href="contact.html" class="btn btn-primary">Découvrez-Les Ici</a>
+      <a href="contact.html" class="btn btn-primary">Découvrez-les Ici</a>
     </div>
   </div>
 </section>
 
 
     <!-- Testimonials/témoignage Section -->
-    <section class="testimonials">
-        <div class="container">
-            <h2 class="section-title">Ce Que Disent Nos Clients</h2>
-            <div class="testimonials-carousel" id="testimonials-carousel">
-                <div class="testimonial-slide active">
-                    <div class="testimonial-card">
-                        <div class="testimonial-author">
-                            <img src="https://images.pexels.com/photos/1181686/pexels-photo-1181686.jpeg?auto=compress&cs=tinysrgb&w=100" alt="Amélie Janneth">
-                            <div class="author-info">
-                                <h4>Amélie Janneth</h4>
-                                <p>Chef Manager</p>
-                            </div>
-                        </div>
-                        <p class="testimonial-text">
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim, odio ac imperdiet luctus, ante nisl accusam justo."
-                        </p>
-                    </div>
-                </div>
-                <div class="testimonial-slide">
-                    <div class="testimonial-card">
-                        <div class="testimonial-author">
-                            <img src="https://images.pexels.com/photos/1181690/pexels-photo-1181690.jpeg?auto=compress&cs=tinysrgb&w=100" alt="Jacob Joshua">
-                            <div class="author-info">
-                                <h4>Jacob Joshua</h4>
-                                <p>Chief Manager</p>
-                            </div>
-                        </div>
-                        <p class="testimonial-text">
-                            "Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
-                        </p>
-                    </div>
-                </div>
-                <div class="testimonial-slide">
-                    <div class="testimonial-card">
-                        <div class="testimonial-author">
-                            <img src="https://images.pexels.com/photos/1181424/pexels-photo-1181424.jpeg?auto=compress&cs=tinysrgb&w=100" alt="Sarah Martin">
-                            <div class="author-info">
-                                <h4>Sarah Martin</h4>
-                                <p>CEO</p>
-                            </div>
-                        </div>
-                        <p class="testimonial-text">
-                            "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
-                        </p>
-                    </div>
-                </div>
+   <section class="testimonials">
+  <div class="container">
+    <h2 class="section-title">Ce que disent nos Clients</h2>
+    <div class="testimonials-carousel" id="testimonials-carousel">
+      <div class="testimonial-slide active">
+        <div class="testimonial-card">
+          <div class="testimonial-author">
+            <img src="https://images.pexels.com/photos/1181686/pexels-photo-1181686.jpeg?auto=compress&cs=tinysrgb&w=100" alt="Amélie Janneth">
+            <div class="author-info">
+              <h4>Amélie Janneth</h4>
+              <p>Chef Manager</p>
             </div>
-            <div class="testimonials-nav">
-                <button class="testimonial-nav-btn prev" onclick="changeTestimonial(-1)">‹</button>
-                <div class="testimonials-dots">
-                    <span class="dot active" onclick="currentTestimonial(1)"></span>
-                    <span class="dot" onclick="currentTestimonial(2)"></span>
-                    <span class="dot" onclick="currentTestimonial(3)"></span>
-                </div>
-                <button class="testimonial-nav-btn next" onclick="changeTestimonial(1)">›</button>
-            </div>
+          </div>
+          <p class="testimonial-text">
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim, odio ac imperdiet luctus, ante nisl accusam justo."
+          </p>
         </div>
-    </section>
+      </div>
+      <div class="testimonial-slide">
+        <div class="testimonial-card">
+          <div class="testimonial-author">
+            <img src="https://images.pexels.com/photos/1181690/pexels-photo-1181690.jpeg?auto=compress&cs=tinysrgb&w=100" alt="Jacob Joshua">
+            <div class="author-info">
+              <h4>Jacob Joshua</h4>
+              <p>Chief Manager</p>
+            </div>
+          </div>
+          <p class="testimonial-text">
+            "Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
+          </p>
+        </div>
+      </div>
+      <div class="testimonial-slide">
+        <div class="testimonial-card">
+          <div class="testimonial-author">
+            <img src="https://images.pexels.com/photos/1181424/pexels-photo-1181424.jpeg?auto=compress&cs=tinysrgb&w=100" alt="Sarah Martin">
+            <div class="author-info">
+              <h4>Sarah Martin</h4>
+              <p>CEO</p>
+            </div>
+          </div>
+          <p class="testimonial-text">
+            "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="testimonials-nav">
+      <button class="testimonial-nav-btn prev">‹</button>
+      <div class="testimonials-dots">
+        <span class="dot active"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
+      <button class="testimonial-nav-btn next">›</button>
+    </div>
+  </div>
+</section>
 
     <!-- Footer -->
     <footer class="footer">
@@ -359,6 +360,5 @@
     </footer>
 
     <script src="js/main.js"></script>
-    <script src="js/carousel.js"></script>
 </body>
 </html>
