--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
     <!-- Colonne droite : texte -->
     <div class="team-content">
-      <h2 class="section-title">Notre Équipe</h2>
+      <h2 class="section-title">Notre Team</h2>
       <p class="team-description">
         Donec dignissim, odio ac imperdiet luctus, ante nisl accumsan justo, et venenatis ante metus pellentesque sem.
       </p>
