réglage problème de process en carousel mobile

--- a/produits.html
+++ b/produits.html
@@ -137,95 +137,109 @@
     </section>
 
     <!-- Process Section -->
-    <section class="process">
-        <div class="container">
-            <h2 class="section-title">MVP BOOSTER PACK - EN 4 ÉTAPES</h2>
-   
-            <div class="process-steps">
-                <div class="process-step">
-                    <div class="step-number">1</div>
-                    <div class="step-content">
-                        <div class="step-icon">
-                            <img src="/assets/logo_cadrage.png" alt="Cadrage & Validation">
-                        </div>
-                        <h3>Cadrage & Validation</h3>
-                        <p>Comprendre vos besoins et votre cible</p>
-                    </div>
-                </div>
+   <section class="process">
+    <div class="container">
+        <h2 class="section-title">MVP BOOSTER PACK - EN 4 ÉTAPES</h2>
 
-                <div class="process-step">
-                    <div class="step-number">2</div>
-                    <div class="step-content">
-                        <div class="step-icon">
-                            <img src="assets/logouxui.png" alt="UX/UI">
-                        </div>
-                        <h3>UX/UI</h3>
-                        <p> Création d'un prototype fonctionnel</p>
+        <div class="process-steps">
+            <div class="process-step">
+                <div class="step-number">1</div>
+                <div class="step-content">
+                    <div class="step-icon">
+                        <img src="/assets/logo_cadrage.png" alt="Cadrage & Validation">
                     </div>
-                </div>
-
-                <div class="process-step">
-                    <div class="step-number">3</div>
-                    <div class="step-content">
-                        <div class="step-icon">
-                            <img src="assets/logodevmvp.png" alt="Développement MVP">
-                        </div>
-                        <h3>Développement MVP</h3>
-                        <p>Développement rapide, méthode agile</p>
-                    </div>
-                </div>
-
-                <div class="process-step">
-                    <div class="step-number">4</div>
-                    <div class="step-content">
-                        <div class="step-icon">
-                            <img src="assets/logo.svg" alt="Lancement & feedback">
-                        </div>
-                        <h3>Lancement & feedback</h3>
-                        <p>Mise en ligne + itérations post-lancement</p>
-                    </div>
+                    <h3>Cadrage & Validation</h3>
+                    <p>Comprendre vos besoins et votre cible</p>
                 </div>
             </div>
 
-            <div class="process-carousel" id="process-carousel">
-                <div class="process-slides">
-                    <div class="process-slide active">
-                        <div class="process-card">
-                            <div class="process-card-icon">
-                                <img src="https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?auto=compress&cs=tinysrgb&w=200" alt="Cadrage & Validation">
-                            </div>
-                            <h4>Cadrage & Validation</h4>
-                            <p>Comprendre vos besoins et votre cible</p>
-                        </div>
+            <div class="process-step">
+                <div class="step-number">2</div>
+                <div class="step-content">
+                    <div class="step-icon">
+                        <img src="assets/logouxui.png" alt="UX/UI">
                     </div>
-                    <div class="process-slide">
-                        <div class="process-card">
-                            <div class="process-card-icon">
-                                <img src="https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?auto=compress&cs=tinysrgb&w=200" alt="UX/UI">
-                            </div>
-                            <h4>UX/UI</h4>
-                            <p>Création d'un prototype fonctionnel</p>
-                        </div>
-                    </div>
-                    <div class="process-slide">
-                        <div class="process-card">
-                            <div class="process-card-icon">
-                                <img src="https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?auto=compress&cs=tinysrgb&w=200" alt="Développement MVP">
-                            </div>
-                            <h4>Développement MVP</h4>
-                            <p>Développement rapide, méthode agile</p>
-                        </div>
-                    </div>
+                    <h3>UX/UI</h3>
+                    <p>Création d'un prototype fonctionnel</p>
                 </div>
-                <div class="process-dots">
-                    <span class="dot active" onclick="goToProcessSlide(1)"></span>
-                    <span class="dot" onclick="goToProcessSlide(2)"></span>
-                    <span class="dot" onclick="goToProcessSlide(3)"></span>
-                    <span class="dot" onclick="goToProcessSlide(4)"></span>
+            </div>
+
+            <div class="process-step">
+                <div class="step-number">3</div>
+                <div class="step-content">
+                    <div class="step-icon">
+                        <img src="assets/logodevmvp.png" alt="Développement MVP">
+                    </div>
+                    <h3>Développement MVP</h3>
+                    <p>Développement rapide, méthode agile</p>
+                </div>
+            </div>
+
+            <div class="process-step">
+                <div class="step-number">4</div>
+                <div class="step-content">
+                    <div class="step-icon">
+                        <img src="assets/logo.svg" alt="Lancement & feedback">
+                    </div>
+                    <h3>Lancement & feedback</h3>
+                    <p>Mise en ligne + itérations post-lancement</p>
                 </div>
             </div>
         </div>
-    </section>
+
+        <!-- Carousel mobile section -->
+     <div class="process-carousel">
+    <div class="process-slides">
+        <div class="process-slide active">
+            <div class="process-card">
+                <div class="process-card-icon">
+                    <img src="/assets/logo_cadrage.png" alt="Cadrage & Validation">
+                </div>
+                <h4>Cadrage & Validation</h4>
+                <p>Comprendre vos besoins et votre cible</p>
+            </div>
+        </div>
+        <div class="process-slide">
+            <div class="process-card">
+                <div class="process-card-icon">
+                    <img src="assets/logouxui.png" alt="UX/UI">
+                </div>
+                <h4>UX/UI</h4>
+                <p>Création d'un prototype fonctionnel</p>
+            </div>
+        </div>
+        <div class="process-slide">
+            <div class="process-card">
+                <div class="process-card-icon">
+                    <img src="assets/logodevmvp.png" alt="Développement MVP">
+                </div>
+                <h4>Développement MVP</h4>
+                <p>Développement rapide, méthode agile</p>
+            </div>
+        </div>
+        <div class="process-slide">
+            <div class="process-card">
+                <div class="process-card-icon">
+                    <img src="assets/logo.svg" alt="Lancement & feedback">
+                </div>
+                <h4>Lancement & feedback</h4>
+                <p>Mise en ligne + itérations post-lancement</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="process-dots">
+        <span class="process-dot active">1</span>
+        <span class="process-dot">2</span>
+        <span class="process-dot">3</span>
+        <span class="process-dot">4</span>
+    </div>
+
+</div>
+
+    </div>
+</section>
+
 
     <!-- Footer -->
     <footer class="footer">
@@ -284,6 +298,5 @@
     </footer>
 
     <script src="js/main.js"></script>
-    <script src="js/process-carousel.js"></script>
 </body>
 </html>
